unpackaged/main/default/objects/Activity/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account Mobile Phone</label>
    <type>Phone</type>
</CustomField>