unpackaged/main/default/objects/Activity/fields/Assigned_to_Queues__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Queues__c</fullName>
    <formula>If( OR(Owner:Queue.DeveloperName =&quot;Second_Trade&quot;,Owner:Queue.DeveloperName =&quot;Third_Trade&quot;),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Queues</label>
    <type>Checkbox</type>
</CustomField>