unpackaged/main/default/objects/Activity/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <label>Case Subject</label>
    <length>128</length>
    <type>Text</type>
</CustomField>