unpackaged/main/default/objects/Activity/fields/Do_not_send_email_to_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Do_not_send_email_to_Case_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not send email to Case Owner</label>
    <type>Checkbox</type>
</CustomField>