unpackaged/main/default/objects/Activity/fields/Is_File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Is_File_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is File Uploaded?</label>
    <type>Checkbox</type>
</CustomField>