unpackaged/main/default/objects/Activity/fields/POA_needs_resubmission__c.field-meta.xml
<CustomField>
    <fullName>POA_needs_resubmission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for Processing Associate to trace POAs that need to be resubmitted to the IRS.</description>
    <label>POA needs resubmission</label>
    <type>Checkbox</type>
</CustomField>