unpackaged/main/default/objects/Activity/fields/Subject_for_filters__c.field-meta.xml
<CustomField>
    <fullName>Subject_for_filters__c</fullName>
    <formula>Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject for filters</label>
    <type>Text</type>
</CustomField>