unpackaged/main/default/objects/Activity/fields/X2T_Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>X2T_Opportunity_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2T Opportunity Created</label>
    <type>Checkbox</type>
</CustomField>